--- a/BaiTapWindowsForm/BaiTap2/BaiTap2.csproj
+++ b/BaiTapWindowsForm/BaiTap2/BaiTap2.csproj
@@ -52,6 +52,18 @@
     <Compile Include="frmBai1.Designer.cs">
       <DependentUpon>frmBai1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmBai2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBai2.Designer.cs">
+      <DependentUpon>frmBai2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmBai3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBai3.Designer.cs">
+      <DependentUpon>frmBai3.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmChinh.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,8 +73,15 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThietBi.cs" />
+    <Compile Include="TinhToan.cs" />
     <EmbeddedResource Include="frmBai1.resx">
       <DependentUpon>frmBai1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBai2.resx">
+      <DependentUpon>frmBai2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBai3.resx">
+      <DependentUpon>frmBai3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmChinh.resx">
       <DependentUpon>frmChinh.cs</DependentUpon>
