--- a/ChuDe3/BaiTap_C/BaiTap_C.csproj
+++ b/ChuDe3/BaiTap_C/BaiTap_C.csproj
@@ -55,8 +55,10 @@
     <Compile Include="frmThongTinSV.Designer.cs">
       <DependentUpon>frmThongTinSV.cs</DependentUpon>
     </Compile>
+    <Compile Include="HocPhan.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLHocPhan.cs" />
     <Compile Include="QLSinhVien.cs" />
     <Compile Include="SinhVien.cs" />
     <EmbeddedResource Include="frmThongTinSV.resx">
@@ -84,6 +86,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="HocPhan.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
