--- a/ChuDe5/Lab_Advanced_Command/Lab_Advanced_Command.csproj
+++ b/ChuDe5/Lab_Advanced_Command/Lab_Advanced_Command.csproj
@@ -52,10 +52,19 @@
     <Compile Include="FoodForm.Designer.cs">
       <DependentUpon>FoodForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FoodInfoForm .cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FoodInfoForm .Designer.cs">
+      <DependentUpon>FoodInfoForm .cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FoodForm.resx">
       <DependentUpon>FoodForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FoodInfoForm .resx">
+      <DependentUpon>FoodInfoForm .cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -78,6 +87,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="RestaurantManagement.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
