--- a/khanvungdo (1)/khanvungdo/WindowsFormsApp2/WindowsFormsApp2.csproj
+++ b/khanvungdo (1)/khanvungdo/WindowsFormsApp2/WindowsFormsApp2.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Infrastructure\Db.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\PasswordHasher.cs" />
     <Compile Include="Security\UserContext.cs" />
     <Compile Include="Services\QLKhachHang.cs" />
     <Compile Include="Services\QLNhanVien.cs" />
